# tiralabra-2023

./: .coverage  README.md  pyproject.toml
dokumentaatio/: maarittely.md
dokumentaatio/raportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
dokumentaatio/raportit/vanhat/: viikko1.md  viikko3.md  viikko4.md
src/: djikstra.py  luo_sokkelo.py  luo_verkko.py  print_sokkelo.py
src/algorithms/: djikstra.py
src/resource/: keko.py  node.py
src/resource/unused/: sokkelo.py
src/tests/: dijkstra_test.py  luo_sokkelo_test.py  luo_verkko_test.py
src/unused/: dijkstra_testxxx.py  print_sokkelo.py
