[tool.poetry]
name = "tiralabra-2023"
version = "0.1.0"
description = ""
authors = ["V채채r채sm채ki <mvaaras@gmail.com>"]
readme = "README.md"
packages = [{include = "tiralabra_2023"}]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
